Pass a handle to the metadb around rather than track artists/titles/etc

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -73,6 +73,8 @@ BEGIN
     LTEXT           "Static",IDC_FILE_NAME_PREVIEW,93,214,113,8
     GROUPBOX        "Saving",IDC_STATIC,15,147,303,88
     GROUPBOX        "Searching",IDC_STATIC,15,15,303,127
+    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,73,251,40,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Render Line Gap",IDC_STATIC,15,253,55,8
 END
 
 
