--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -162,7 +162,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",ID_LYRIC_EDIT_OK,327,295,50,14
     PUSHBUTTON      "Cancel",ID_LYRIC_EDIT_CANCEL,381,295,50,14
     EDITTEXT        IDC_LYRIC_TEXT,6,7,480,279,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
-    PUSHBUTTON      "Apply",ID_LYRIC_EDIT_APPLY,436,295,50,14
+    PUSHBUTTON      "Apply",ID_LYRIC_EDIT_APPLY,436,295,50,14,WS_DISABLED
 END
 
 
