--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -54,24 +54,26 @@ IDD_PREFERENCES DIALOGEX 0, 0, 332, 288
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
-    RTEXT           "Save Method:",IDC_STATIC,29,184,59,8
-    RTEXT           "Filename format:",IDC_STATIC,27,199,59,8
-    LTEXT           "This is a sample preferences page with meaningless settings.",IDC_STATIC,79,25,204,8
-    LISTBOX         IDC_ACTIVE_SOURCE_LIST,20,39,89,77,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_INACTIVE_SOURCE_LIST,208,39,104,81,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "<<",IDC_SOURCE_ACTIVATE_BTN,137,55,50,14
-    PUSHBUTTON      ">>",IDC_SOURCE_DEACTIVATE_BTN,136,85,50,14
-    PUSHBUTTON      "Up",IDC_SOURCE_MOVE_UP_BTN,21,121,28,14
-    PUSHBUTTON      "Down",IDC_SOURCE_MOVE_DOWN_BTN,51,121,34,14
+    RTEXT           "Save Method:",IDC_STATIC,0,182,59,11
+    RTEXT           "Filename format:",IDC_STATIC,0,202,59,10
+    LTEXT           "Search order:",IDC_STATIC,6,12,86,8
+    LISTBOX         IDC_ACTIVE_SOURCE_LIST,6,24,126,90,LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_INACTIVE_SOURCE_LIST,198,24,125,90,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "<<",IDC_SOURCE_ACTIVATE_BTN,138,48,55,14
+    PUSHBUTTON      ">>",IDC_SOURCE_DEACTIVATE_BTN,138,72,54,14
+    PUSHBUTTON      "Up",IDC_SOURCE_MOVE_UP_BTN,18,120,41,14
+    PUSHBUTTON      "Down",IDC_SOURCE_MOVE_DOWN_BTN,78,120,44,14
     CONTROL         "Enable automatic save",IDC_AUTOSAVE_ENABLED_CHKBOX,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,21,159,88,10
-    COMBOBOX        IDC_SAVE_METHOD_COMBO,91,182,112,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,93,197,113,14,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_FILE_NAME_PREVIEW,93,214,113,8
-    GROUPBOX        "Saving",IDC_STATIC,15,147,303,88
-    GROUPBOX        "Searching",IDC_STATIC,15,15,303,127
-    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,73,251,40,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Render Line Gap",IDC_STATIC,15,253,55,8
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,162,88,10
+    COMBOBOX        IDC_SAVE_METHOD_COMBO,66,180,144,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_SAVE_FILENAME_FORMAT,66,198,144,14,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_FILE_NAME_PREVIEW,66,216,113,8
+    GROUPBOX        "Saving",IDC_STATIC,0,147,330,88
+    GROUPBOX        "Searching",IDC_STATIC,0,0,330,142
+    EDITTEXT        IDC_RENDER_LINEGAP_EDIT,66,258,40,14,ES_AUTOHSCROLL | ES_NUMBER
+    RTEXT           "Line Gap:",IDC_STATIC,18,261,42,10
+    GROUPBOX        "Display",IDC_STATIC,0,240,330,42
+    LTEXT           "Available sources:",IDC_STATIC,198,12,58,8
 END
 
 
@@ -87,7 +89,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 325
-        TOPMARGIN, 7
+        TOPMARGIN, 4
         BOTTOMMARGIN, 281
     END
 END
