Add preferences save file format preview

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -59,15 +59,15 @@ BEGIN
     LTEXT           "Search order:",IDC_STATIC,6,12,86,8
     LISTBOX         IDC_ACTIVE_SOURCE_LIST,6,24,126,90,LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LISTBOX         IDC_INACTIVE_SOURCE_LIST,198,24,125,90,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "<<",IDC_SOURCE_ACTIVATE_BTN,138,48,55,14
-    PUSHBUTTON      ">>",IDC_SOURCE_DEACTIVATE_BTN,138,72,54,14
-    PUSHBUTTON      "Up",IDC_SOURCE_MOVE_UP_BTN,18,120,41,14
-    PUSHBUTTON      "Down",IDC_SOURCE_MOVE_DOWN_BTN,78,120,44,14
+    PUSHBUTTON      "<<",IDC_SOURCE_ACTIVATE_BTN,138,48,55,14,WS_DISABLED
+    PUSHBUTTON      ">>",IDC_SOURCE_DEACTIVATE_BTN,138,72,54,14,WS_DISABLED
+    PUSHBUTTON      "Up",IDC_SOURCE_MOVE_UP_BTN,18,120,41,14,WS_DISABLED
+    PUSHBUTTON      "Down",IDC_SOURCE_MOVE_DOWN_BTN,78,120,44,14,WS_DISABLED
     CONTROL         "Enable automatic save",IDC_AUTOSAVE_ENABLED_CHKBOX,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,162,88,10
     COMBOBOX        IDC_SAVE_METHOD_COMBO,66,180,144,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_SAVE_FILENAME_FORMAT,66,198,144,14,ES_AUTOHSCROLL
-    LTEXT           "Static",IDC_FILE_NAME_PREVIEW,66,216,113,8
+    LTEXT           "Static",IDC_FILE_NAME_PREVIEW,66,216,144,8,SS_WORDELLIPSIS
     GROUPBOX        "Saving",IDC_STATIC,0,147,330,88
     GROUPBOX        "Searching",IDC_STATIC,0,0,330,142
     EDITTEXT        IDC_RENDER_LINEGAP_EDIT,66,258,40,14,ES_AUTOHSCROLL | ES_NUMBER
