--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -132,15 +132,23 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_SOUTH_AFRICA
 // Dialog
 //
 
-IDD_LYRIC_EDIT DIALOGEX 0, 0, 493, 316
+IDD_LYRIC_EDIT DIALOGEX 0, 0, 499, 316
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Lyric Editor"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",ID_LYRIC_EDIT_OK,327,295,50,14
-    PUSHBUTTON      "Cancel",ID_LYRIC_EDIT_CANCEL,381,295,50,14
-    EDITTEXT        IDC_LYRIC_TEXT,6,7,480,279,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
-    PUSHBUTTON      "Apply",ID_LYRIC_EDIT_APPLY,436,295,50,14,WS_DISABLED
+    DEFPUSHBUTTON   "OK",ID_LYRIC_EDIT_OK,302,294,52,15
+    PUSHBUTTON      "Cancel",ID_LYRIC_EDIT_CANCEL,371,294,58,15
+    EDITTEXT        IDC_LYRIC_TEXT,163,7,329,279,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
+    PUSHBUTTON      "Apply",ID_LYRIC_EDIT_APPLY,440,293,52,16,WS_DISABLED
+    PUSHBUTTON      "Synchronise selected line",IDC_LYRIC_EDIT_SYNC,25,19,112,21
+    PUSHBUTTON      "-5s",IDC_LYRIC_EDIT_BACK5,14,75,36,18
+    PUSHBUTTON      "Play",IDC_LYRIC_EDIT_PLAY,56,76,50,17
+    PUSHBUTTON      "+5s",IDC_LYRIC_EDIT_FWD5,108,75,37,17
+    PUSHBUTTON      "Reset/Undo changes",IDC_LYRIC_EDIT_RESET,29,109,79,20
+    LTEXT           "Playback time: 00:00",IDC_LYRIC_EDIT_TIME,15,65,68,8
+    GROUPBOX        "Synchronisation",IDC_STATIC,6,7,148,40
+    GROUPBOX        "Playback",IDC_STATIC,6,51,148,50
 END
 
 
@@ -155,7 +163,7 @@ BEGIN
     IDD_LYRIC_EDIT, DIALOG
     BEGIN
         LEFTMARGIN, 6
-        RIGHTMARGIN, 486
+        RIGHTMARGIN, 492
         TOPMARGIN, 7
         BOTTOMMARGIN, 309
     END
