Add a basic implementation of synchronising lyrics to the current time

--- a/src/foo_openlyrics.rc
+++ b/src/foo_openlyrics.rc
@@ -139,7 +139,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",ID_LYRIC_EDIT_OK,302,294,52,15
     PUSHBUTTON      "Cancel",ID_LYRIC_EDIT_CANCEL,371,294,58,15
-    EDITTEXT        IDC_LYRIC_TEXT,163,7,329,279,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
+    EDITTEXT        IDC_LYRIC_TEXT,163,7,329,279,ES_MULTILINE | ES_AUTOHSCROLL | ES_NOHIDESEL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     PUSHBUTTON      "Apply",ID_LYRIC_EDIT_APPLY,440,293,52,16,WS_DISABLED
     PUSHBUTTON      "Synchronise selected line",IDC_LYRIC_EDIT_SYNC,25,19,112,21
     PUSHBUTTON      "-5s",IDC_LYRIC_EDIT_BACK5,14,75,36,18
