--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -13,6 +13,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
+        tag_name: release-test
         release_name: release-test
         prerelease: true
 
