--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -17,16 +17,6 @@ jobs:
         release_name: release-test
         prerelease: true
 
-    - name: Set release upload URL and release version
-      shell: bash
-      run: |
-        release_upload_url="${{ steps.release.outputs.upload_url }}"
-        echo "::set-env name=RELEASE_UPLOAD_URL::$release_upload_url"
-        echo "release upload url: "$RELEASE_UPLOAD_URL
-        release_version="0.0"
-        echo "::set-env name=RELEASE_VERSION::$release_version"
-        echo "release version: "$RELEASE_VERSION
-
     - name: Checkout code
       uses: actions/checkout@v2
 
@@ -40,17 +30,18 @@ jobs:
     - name: Pack binary into archive
       shell: bash
       run: |
-        archivename="foo_openlyrics-${{ env.RELEASE_VERSION }}.fb2k-component"
+        release_version="0.0"
+        archivename="foo_openlyrics-${release_version}.fb2k-component"
         7z a "${archivename}" ./build/vs2017/Release/foo_openlyrics.dll
-        echo "::set-env name=ASSET::${archivename}"
+        echo "BINARY_PATH=${archivename}" >> $GITHUB_ENV
 
     - name: Upload release archive
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ env.RELEASE_UPLOAD_URL }}
-        asset_path: ${{ env.ASSET }}
-        asset_name: ${{ env.ASSET }}
+        upload_url: ${{ steps.release.outputs.upload_url }}
+        asset_path: ${{ env.BINARY_PATH }}
+        asset_name: ${{ env.BINARY_PATH }}
         asset_content_type: application/octet-stream
 
