Switch to creating releases as drafts for testing.

--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -15,6 +15,7 @@ jobs:
       with:
         tag_name: release-test
         release_name: release-test
+        draft: true
         prerelease: true
 
     - name: Checkout code
