--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -7,8 +7,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Print Windows SDK registry info before installation
+      shell: powershell
+      continue-on-error: true
+      run: |
+        Get-Item "HKLM:\SOFTWARE\Microsoft\Windows Kits\Installed Roots"
+        Get-ChildItem "HKLM:\SOFTWARE\Microsoft\Windows Kits\Installed Roots"
 
     - name: Add MSBuild to the PATH
       uses: microsoft/setup-msbuild@v1
@@ -18,17 +22,17 @@ jobs:
     - name: Install Windows SDK dependencies
       uses: crazy-max/ghaction-chocolatey@v1
       with:
-        args: install visualstudio2019-workload-vctools --package-parameters "--add Microsoft.VisualStudio.Component.Windows81SDK --add Microsoft.VisualStudio.Component.VC.ATL --add Microsoft.VisualStudio.Component.VC.ATLMFC"
+        args: install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Component.Windows81SDK --add Microsoft.VisualStudio.Component.VC.ATL --add Microsoft.VisualStudio.Component.VC.ATLMFC"
 
     - name: Print SDK versions
       shell: bash
       continue-on-error: true
       run: |
         ls -la "C:/Program Files (x86)/Windows Kits"
-        ls -la "C:/Program Files (x86)/Windows Kits/8.1"
         ls -la "C:/Program Files (x86)/Windows Kits/10"
-        cat "C:/Program Files (x86)/Windows Kits/8.1/SDKManifest.xml"
+        ls -la "C:/Program Files (x86)/Windows Kits/8.1"
         cat "C:/Program Files (x86)/Windows Kits/10/SDKManifest.xml"
+        cat "C:/Program Files (x86)/Windows Kits/8.1/SDKManifest.xml"
 
     - name: Print Windows SDK registry info
       shell: powershell
@@ -37,9 +41,12 @@ jobs:
         Get-Item "HKLM:\SOFTWARE\Microsoft\Windows Kits\Installed Roots"
         Get-ChildItem "HKLM:\SOFTWARE\Microsoft\Windows Kits\Installed Roots"
 
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Build binary
       working-directory: ${{ env.GITHUB_WORKSPACE }}
-      run: msbuild /m /p:Configuration=Release /p:Platform=x86 ./build/vs2017/foo_openlyrics.sln
+      run: msbuild /m /p:Configuration=Release /p:Platform=x86 /p:WindowsTargetPlatformVersion=10.0.16299.0 ./build/vs2017/foo_openlyrics.sln
 
     - name: Pack binary into archive
       shell: bash
